--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "devDependencies": {
     "autoprefixer": "7.2.x",
     "browser-sync": "2.23.x",
+    "del": "^3.0.0",
     "gulp": "3.9.x",
+    "gulp-csso": "^0.2.0",
     "gulp-less": "3.4.x",
     "gulp-plumber": "1.2.x",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "7.0.x",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-webp": "^3.0.0",
+    "posthtml-include": "^1.1.0",
+    "run-sequence": "^2.2.1",
     "@htmlacademy/editorconfig-cli": "1.x",
     "stylelint": "8.4.x",
     "stylelint-config-htmlacademy": "0.1.x"
@@ -18,8 +26,8 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" —syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp style",
-    "start": "gulp serve"
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   },
   "browserslist": [
     "last 2 versions",
